tests/compilefail24.out
[1mtests/compilefail24.pas:5:5: [0m[1m[91merror:[0m Invalid Token: 'program'
     5 | 	program compilefail24;