tests/compilefail24.pas
program compilefail24(output);
{a random token in the middle of the main block}
begin
	writeln('hello world');
	program compilefail24;
end.

